--- a/defense/abbr.tex
+++ b/defense/abbr.tex
@@ -57,8 +57,8 @@ align=center,fill=propa-grey]
 \def\SAT{\textcolor{green}{\texttt{SAT}}}
 \def\UNSAT{\textcolor{red}{\texttt{UNSAT}}}
 
-\def\true{\textcolor{green}{\texttt{true}}}
-\def\false{\textcolor{red}{\texttt{false}}}
+\def\true{\textcolor{green}{\texttt{T}}}
+\def\false{\textcolor{red}{\texttt{F}}}
 
 \def\ok{\textcolor{green}{\cmark}}
 \def\ko{\textcolor{red}{\xmark}}
